# CDPARSONS_THESIS

./: Untitled.ipynb  Untitled1.ipynb  comparison-viz.html  index.html  method.html  pyproject.toml  questionnaire.html  results.html
api/: send-results-link.js
assets/: README.md
css/: Untitled  ambient-mesh.css  base.css  comparison-viz.css  components.css  fonts.css  layout.css  questionnaire-buffer.css  results-data-modules.css  results-journey.css  results-print-card.css  results.css  theme.css  typography.css
data/: README.md  image_level_tags.csv  image_metadata.json  nature_image_level_tags.csv  results_brazil.json  results_brazil_nature_clean.json  results_brazil_nature_superflat.json  results_brazil_superflat.json  results_egypt.json  results_egypt_nature_clean.json  results_egypt_nature_clean_superflat.json  results_egypt_superflat.json  results_finland.json  results_finland_nature_clean.json  results_finland_nature_clean_superflat.json  results_finland_superflat.json  topcolor_climate_summary.csv  topcolor_color_rows.csv  topcolor_color_rows_brazil_nature.csv  topcolor_color_rows_egypt_nature_clean.csv  topcolor_color_rows_finland_nature_clean.csv  topcolor_image_summary.csv
datasss/: results_brazil_superflat.json  results_egypt.json  results_egypt_superflat.json  results_finland.json  results_finland_superflat.json  top20colors .csv  topcolor_color_rows.csv
scripts/: ambientMesh.js  climateData.js  colorUtils.js  comparisonViz.js  convertImageMetadata.js  editorialDotField.js  layeredScatterplot.js  main.js  panelToggle.js  questionnaire.js  (+4 more)
(+5 files in other folders)
